--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^4.13.0"
